--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
+	<link rel="stylesheet" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" href="stylesheets/github-dark.css">
 </head>
 <body>
-# Me
+<h1>Me</h1>
 
 I'm a Software Engineer, proficient in Java/NodeJS with more than 5 years of experience in building quality products.
 
@@ -25,6 +27,8 @@ I'm a Creative technologist, Self-motivated and result-oriented professional wit
 + Knowledge of jPOS(proprietary framework) EFT Switch.
 
 </body>
+
+<script src="javascripts/main.js"></script>
 </html>
 
 
